--- a/pulse-jump-analyzer/pom.xml
+++ b/pulse-jump-analyzer/pom.xml
@@ -15,6 +15,11 @@
     
     <dependencies>
         <dependency>
+        <groupId>telran.pulse.monitoring</groupId>
+        <artifactId>pulse-values-analyzer</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-lambda-java-core</artifactId>
             <version>1.2.1</version>
